[package]
name = "rust-vercel"
authors = ["katayama8000 <tattu.0310@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1.1.0" }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[[bin]]
name = "handler"
path = "api/handler.rs"
